chat: fix custom chat background in dark mode

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1415,7 +1415,7 @@ ac5 = var(--ac-5)
         ._2J60S { border: 1px solid bg5 }
 
         /// Feat -> Custom chat background.
-        /[data-asset-chat-background-light] {
+        /[data-asset-chat-background-dark], /[data-asset-chat-background-light] {
             filter: invert(var(--chat-bg-i)) opacity(var(--chat-bg-o))
             background-position: var(--chat-bg-p) i
             background-repeat: var(--chat-bg-r) i
